src/components/miniProfile.module.css
:global(.mobileWidth) {
  .miniProfile {
    overflow: initial;
  }
}

:global(#portal .modalRoot .modalBody.scrollbarHover, ) {
  &:has(.miniProfile) {
    overflow-y: hidden;
    padding: 0;
    margin: 0;
  }
}

:global(.desktopWidth .modalRoot) {
  &:has(.miniProfile) {
    max-height: 90vh;
  }
}

:global(.modalRoot) {
  .miniProfile {
    overflow: hidden;
  }
}

.miniProfile {
  display: flex;
  flex-direction: column;
  padding-bottom: 4px;
  gap: 8px;
  .overlayInfo {
    z-index: 111;
    margin-top: -60px;
    margin-left: 10px;
  }

  .section.info {
    .name {
      display: flex;
      gap: 6px;
    }
    .tag {
      color: var(--gray-400);
    }
    .buttons {
      display: flex;
      margin-top: 8px;
      gap: 8px;
      .button {
        flex: 1;
        :global .icon {
          font-size: 16px;
        }
      }
    }
  }

  .section .stats {
    display: flex;
    flex-wrap: wrap;
    color: var(--gray-400);
    gap: 8px;
    .full {
      color: var(--gray-100);
    }
  }

  .section {
    display: flex;
    flex-direction: column;
    padding: 8px;
    margin-right: 4px;
    margin-left: 4px;
    border-radius: var(--radius-10);
    background-color: var(--gray-900);
    gap: 4px;
    .title {
      margin-top: 8px;
      margin-bottom: 4px;
      color: var(--gray-400);
      &:first-child {
        margin-top: 0;
      }
    }
  }
}

.banner {
  position: relative;
  width: 100%;
  aspect-ratio: 16/6;
  .bannerImage {
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    background-color: var(--color);
    filter: brightness(0.8);
    object-fit: cover;
  }
}

.joined {
  display: flex;
  flex-wrap: wrap;
  font-size: 12px;
  gap: 16px;
  .logo {
    width: 14px;
    height: 14px;
    border-radius: var(--radius-max);
  }
  .joinedContainer {
    display: flex;
    align-items: center;
    gap: 4px;
  }
}

.roles {
  display: flex;
  flex-wrap: wrap;
  gap: 4px;
  .role {
    display: flex;
    align-items: center;
    justify-content: center;
    padding: 4px 4px;
    padding-right: 6px;
    border-radius: var(--radius-max);
    background-color: var(--gray-800);
    gap: 4px;
    &.addRole {
      width: 27px;
      height: 27px;
      padding: 0;
      color: var(--gray-400);
      cursor: pointer;
      &:hover {
        color: var(--text-color);
        background-color: var(--gray-700);
      }
    }
    .icon {
      overflow: hidden;
      padding: 0;
      border-radius: var(--radius-max);
    }
  }
}

